add body to swagger
