# swagger.json
@@ -32,7 +32,46 @@
           "Contacts"
         ],
         "description": "Endpoint create a contact",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Contact",
+            "in": "body",
+            "description": "Contact Information",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "Andres"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Moffi"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "andres@test.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "Brown"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "06/19/2000"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "email",
+                "favoriteColor",
+                "birthday"
+              ]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -96,6 +135,44 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "Contact",
+            "in": "body",
+            "description": "Contact Information",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "Andres"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Moffi"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "andres@test.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "Brown"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "06/19/2000"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "email",
+                "favoriteColor",
+                "birthday"
+              ]
+            }
           }
         ],
         "responses": {
